# libtensor

./: CMakeLists.txt  libtensorConfig.cmake.in
libtensor/: CMakeLists.txt
libutil/: CMakeLists.txt
